<resources>
    <string name="app_name">TeaTimer</string>


    <string name="compose_shortcut_long_label1">Green Tea</string>
    <string name="compose_disabled_message1" translatable="false">disabled</string>

    <string name="compose_shortcut_short_label2">Black</string>
    <string name="compose_shortcut_long_label2">Black Tea</string>
    <string name="compose_disabled_message2" translatable="false">disabled</string>
    <string name="green_tea">Green Tea</string>
    <string name="black_tea">Black Tea</string>
    <string name="cancel_timer">Cancel timer</string>
    <string name="will_be_ready">will be ready in</string>
    <string name="seconds">seconds</string>
    <string name="ready">Ready!</string>
    <string name="compose_shortcut_short_label1">Green</string>
</resources>
