<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_green"
        android:shortcutDisabledMessage="@string/compose_disabled_message1"
        android:shortcutId="green_tea"
        android:shortcutLongLabel="@string/compose_shortcut_long_label1"
        android:shortcutShortLabel="@string/compose_shortcut_short_label1">
        <intent
            android:action="android.intent.action.START"
            android:targetClass="com.givehimacookie.d.teatimer.CountDownActivity"
            android:targetPackage="com.d.teatimer">

        <extra
            android:name="teaExtra"
            android:value="10" />
        </intent>

        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_black"
        android:shortcutDisabledMessage="@string/compose_disabled_message2"
        android:shortcutId="black_tea"
        android:shortcutLongLabel="@string/compose_shortcut_long_label2"
        android:shortcutShortLabel="@string/compose_shortcut_short_label2">
        <intent
            android:action="android.intent.action.START"
            android:targetClass="com.givehimacookie.d.teatimer.CountDownActivity"
            android:targetPackage="com.d.teatimer">
        <extra
            android:name="teaExtra"
            android:value="20" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <!-- Specify more shortcuts here. -->
</shortcuts>